Migrate to new H2 database version, rewrite migration scripts to sql; tables renamings; id is now UUID instead integer+seq; logback fixes; readme updated; version changed from 0.0.4 to 0.1.0; JavaFX now not included to jar, should be provided by system for cross-platform